# cpp_factory_split

./: CMakeLists.txt  main.cpp
app/: CMakeLists.txt
app/src/: main.cpp
libs/: CMakeLists.txt
libs/libanimal/: CMakeLists.txt
libs/libanimal/include/animal/: Animal.h
libs/libanimal/src/: Cat.cpp  Dog.cpp
libs/libfactory/: CMakeLists.txt
libs/libfactory/include/factory/: Factory.h
